@@ -20,33 +20,64 @@ import org.apache.calcite.DataContext;
 import org.apache.calcite.avatica.util.ByteString;
 import org.apache.calcite.avatica.util.DateTimeUtils;
 import org.apache.calcite.avatica.util.Spaces;
+import org.apache.calcite.avatica.util.TimeUnitRange;
+import org.apache.calcite.interpreter.Row;
 import org.apache.calcite.linq4j.AbstractEnumerable;
 import org.apache.calcite.linq4j.CartesianProductEnumerator;
 import org.apache.calcite.linq4j.Enumerable;
 import org.apache.calcite.linq4j.Enumerator;
 import org.apache.calcite.linq4j.Linq4j;
 import org.apache.calcite.linq4j.function.Deterministic;
+import org.apache.calcite.linq4j.function.Experimental;
 import org.apache.calcite.linq4j.function.Function1;
 import org.apache.calcite.linq4j.function.NonDeterministic;
 import org.apache.calcite.linq4j.tree.Primitive;
 import org.apache.calcite.runtime.FlatLists.ComparableList;
+import org.apache.calcite.util.Bug;
+import org.apache.calcite.util.NumberUtil;
+import org.apache.calcite.util.TimeWithTimeZoneString;
+import org.apache.calcite.util.TimestampWithTimeZoneString;
+import org.apache.calcite.util.Unsafe;
+import org.apache.calcite.util.Util;
 
+import org.apache.commons.codec.digest.DigestUtils;
+import org.apache.commons.codec.language.Soundex;
+
+import com.google.common.base.Splitter;
+import com.google.common.base.Strings;
+
+import java.lang.reflect.Field;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.math.MathContext;
+import java.math.RoundingMode;
 import java.sql.SQLException;
 import java.sql.Timestamp;
 import java.text.DecimalFormat;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Base64;
+import java.util.Collection;
 import java.util.Date;
 import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Objects;
+import java.util.Set;
 import java.util.TimeZone;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.regex.Pattern;
+import javax.annotation.Nonnull;
+
+import static org.apache.calcite.util.Static.RESOURCE;
+
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 /**
  * Helper methods to implement SQL functions in generated code.
@@ -63,38 +94,42 @@ import java.util.regex.Pattern;
 @Deterministic
 public class SqlFunctions {
   private static final DecimalFormat DOUBLE_FORMAT =
-      new DecimalFormat("0.0E0");
+      NumberUtil.decimalFormat("0.0E0");
 
   private static final TimeZone LOCAL_TZ = TimeZone.getDefault();
 
-  private static final Function1<List<Object>, Enumerable<Object>>
-  LIST_AS_ENUMERABLE =
-      new Function1<List<Object>, Enumerable<Object>>() {
-        public Enumerable<Object> apply(List<Object> list) {
-          return Linq4j.asEnumerable(list);
-        }
-      };
+  private static final DateTimeFormatter ROOT_DAY_FORMAT =
+      DateTimeFormatter.ofPattern("EEEE", Locale.ROOT);
 
-  private static final Function1<Object[], Enumerable<Object[]>>
-  ARRAY_CARTESIAN_PRODUCT =
-      new Function1<Object[], Enumerable<Object[]>>() {
-        public Enumerable<Object[]> apply(Object[] lists) {
-          final List<Enumerator<Object>> enumerators = new ArrayList<>();
-          for (Object list : lists) {
-            enumerators.add(Linq4j.enumerator((List) list));
-          }
-          final Enumerator<List<Object>> product = Linq4j.product(enumerators);
-          return new AbstractEnumerable<Object[]>() {
-            public Enumerator<Object[]> enumerator() {
-              return Linq4j.transform(product,
-                  new Function1<List<Object>, Object[]>() {
-                    public Object[] apply(List<Object> list) {
-                      return list.toArray();
-                    }
-                  });
-            }
-          };
+  private static final DateTimeFormatter ROOT_MONTH_FORMAT =
+      DateTimeFormatter.ofPattern("MMMM", Locale.ROOT);
+
+  private static final Soundex SOUNDEX = new Soundex();
+
+  private static final int SOUNDEX_LENGTH = 4;
+
+  private static final Pattern FROM_BASE64_REGEXP = Pattern.compile("[\\t\\n\\r\\s]");
+
+  private static final Function1<List<Object>, Enumerable<Object>> LIST_AS_ENUMERABLE =
+      Linq4j::asEnumerable;
+
+  // It's important to have XDigit before Digit to match XDigit first
+  // (i.e. see the posixRegex method)
+  private static final String[] POSIX_CHARACTER_CLASSES = new String[] { "Lower", "Upper", "ASCII",
+      "Alpha", "XDigit", "Digit", "Alnum", "Punct", "Graph", "Print", "Blank", "Cntrl", "Space" };
+
+  private static final Function1<Object[], Enumerable<Object[]>> ARRAY_CARTESIAN_PRODUCT =
+      lists -> {
+        final List<Enumerator<Object>> enumerators = new ArrayList<>();
+        for (Object list : lists) {
+          enumerators.add(Linq4j.enumerator((List) list));
         }
+        final Enumerator<List<Object>> product = Linq4j.product(enumerators);
+        return new AbstractEnumerable<Object[]>() {
+          public Enumerator<Object[]> enumerator() {
+            return Linq4j.transform(product, List::toArray);
+          }
+        };
       };
 
   /** Holds, for each thread, a map from sequence name to sequence current
@@ -104,33 +139,171 @@ public class SqlFunctions {
    * that sequences can be parsed, validated and planned. A real application
    * will want persistent values for sequences, shared among threads. */
   private static final ThreadLocal<Map<String, AtomicLong>> THREAD_SEQUENCES =
-      new ThreadLocal<Map<String, AtomicLong>>() {
-        @Override protected Map<String, AtomicLong> initialValue() {
-          return new HashMap<String, AtomicLong>();
-        }
-      };
+      ThreadLocal.withInitial(HashMap::new);
 
   private SqlFunctions() {
   }
 
+  /** SQL TO_BASE64(string) function. */
+  public static String toBase64(String string) {
+    return toBase64_(string.getBytes(UTF_8));
+  }
+
+  /** SQL TO_BASE64(string) function for binary string. */
+  public static String toBase64(ByteString string) {
+    return toBase64_(string.getBytes());
+  }
+
+  private static String toBase64_(byte[] bytes) {
+    String base64 = Base64.getEncoder().encodeToString(bytes);
+    StringBuilder str = new StringBuilder(base64.length() + base64.length() / 76);
+    Splitter.fixedLength(76).split(base64).iterator().forEachRemaining(s -> {
+      str.append(s);
+      str.append("\n");
+    });
+    return str.substring(0, str.length() - 1);
+  }
+
+  /** SQL FROM_BASE64(string) function. */
+  public static ByteString fromBase64(String base64) {
+    try {
+      base64 = FROM_BASE64_REGEXP.matcher(base64).replaceAll("");
+      return new ByteString(Base64.getDecoder().decode(base64));
+    } catch (IllegalArgumentException e) {
+      return null;
+    }
+  }
+
+  /** SQL MD5(string) function. */
+  public static @Nonnull String md5(@Nonnull String string)  {
+    return DigestUtils.md5Hex(string.getBytes(UTF_8));
+  }
+
+  /** SQL MD5(string) function for binary string. */
+  public static @Nonnull String md5(@Nonnull ByteString string)  {
+    return DigestUtils.md5Hex(string.getBytes());
+  }
+
+  /** SQL SHA1(string) function. */
+  public static @Nonnull String sha1(@Nonnull String string)  {
+    return DigestUtils.sha1Hex(string.getBytes(UTF_8));
+  }
+
+  /** SQL SHA1(string) function for binary string. */
+  public static @Nonnull String sha1(@Nonnull ByteString string)  {
+    return DigestUtils.sha1Hex(string.getBytes());
+  }
+
+  /** SQL {@code REGEXP_REPLACE} function with 3 arguments. */
+  public static String regexpReplace(String s, String regex,
+      String replacement) {
+    return regexpReplace(s, regex, replacement, 1, 0, null);
+  }
+
+  /** SQL {@code REGEXP_REPLACE} function with 4 arguments. */
+  public static String regexpReplace(String s, String regex, String replacement,
+      int pos) {
+    return regexpReplace(s, regex, replacement, pos, 0, null);
+  }
+
+  /** SQL {@code REGEXP_REPLACE} function with 5 arguments. */
+  public static String regexpReplace(String s, String regex, String replacement,
+      int pos, int occurrence) {
+    return regexpReplace(s, regex, replacement, pos, occurrence, null);
+  }
+
+  /** SQL {@code REGEXP_REPLACE} function with 6 arguments. */
+  public static String regexpReplace(String s, String regex, String replacement,
+      int pos, int occurrence, String matchType) {
+    if (pos < 1 || pos > s.length()) {
+      throw RESOURCE.invalidInputForRegexpReplace(Integer.toString(pos)).ex();
+    }
+
+    final int flags = makeRegexpFlags(matchType);
+    final Pattern pattern = Pattern.compile(regex, flags);
+
+    return Unsafe.regexpReplace(s, pattern, replacement, pos, occurrence);
+  }
+
+  private static int makeRegexpFlags(String stringFlags) {
+    int flags = 0;
+    if (stringFlags != null) {
+      for (int i = 0; i < stringFlags.length(); ++i) {
+        switch (stringFlags.charAt(i)) {
+        case 'i':
+          flags |= Pattern.CASE_INSENSITIVE;
+          break;
+        case 'c':
+          flags &= ~Pattern.CASE_INSENSITIVE;
+          break;
+        case 'n':
+          flags |= Pattern.DOTALL;
+          break;
+        case 'm':
+          flags |= Pattern.MULTILINE;
+          break;
+        default:
+          throw RESOURCE.invalidInputForRegexpReplace(stringFlags).ex();
+        }
+      }
+    }
+    return flags;
+  }
+
   /** SQL SUBSTRING(string FROM ... FOR ...) function. */
-  public static String substring(String s, int from, int for_) {
-    return s.substring(from - 1, Math.min(from - 1 + for_, s.length()));
+  public static String substring(String c, int s, int l) {
+    int lc = c.length();
+    if (s < 0) {
+      s += lc + 1;
+    }
+    int e = s + l;
+    if (e < s) {
+      throw RESOURCE.illegalNegativeSubstringLength().ex();
+    }
+    if (s > lc || e < 1) {
+      return "";
+    }
+    int s1 = Math.max(s, 1);
+    int e1 = Math.min(e, lc + 1);
+    return c.substring(s1 - 1, e1 - 1);
   }
 
   /** SQL SUBSTRING(string FROM ...) function. */
-  public static String substring(String s, int from) {
-    return s.substring(from - 1);
+  public static String substring(String c, int s) {
+    return substring(c, s, c.length() + 1);
+  }
+
+  /** SQL SUBSTRING(binary FROM ... FOR ...) function. */
+  public static ByteString substring(ByteString c, int s, int l) {
+    int lc = c.length();
+    if (s < 0) {
+      s += lc + 1;
+    }
+    int e = s + l;
+    if (e < s) {
+      throw RESOURCE.illegalNegativeSubstringLength().ex();
+    }
+    if (s > lc || e < 1) {
+      return ByteString.EMPTY;
+    }
+    int s1 = Math.max(s, 1);
+    int e1 = Math.min(e, lc + 1);
+    return c.substring(s1 - 1, e1 - 1);
+  }
+
+  /** SQL SUBSTRING(binary FROM ...) function. */
+  public static ByteString substring(ByteString c, int s) {
+    return substring(c, s, c.length() + 1);
   }
 
   /** SQL UPPER(string) function. */
   public static String upper(String s) {
-    return s.toUpperCase();
+    return s.toUpperCase(Locale.ROOT);
   }
 
   /** SQL LOWER(string) function. */
   public static String lower(String s) {
-    return s.toLowerCase();
+    return s.toLowerCase(Locale.ROOT);
   }
 
   /** SQL INITCAP(string) function. */
@@ -170,6 +343,101 @@ public class SqlFunctions {
     return newS.toString();
   }
 
+  /** SQL REVERSE(string) function. */
+  public static String reverse(String s) {
+    final StringBuilder buf = new StringBuilder(s);
+    return buf.reverse().toString();
+  }
+
+  /** SQL ASCII(string) function. */
+  public static int ascii(String s) {
+    return s.isEmpty()
+        ? 0 : s.codePointAt(0);
+  }
+
+  /** SQL REPEAT(string, int) function. */
+  public static String repeat(String s, int n) {
+    if (n < 1) {
+      return "";
+    }
+    return Strings.repeat(s, n);
+  }
+
+  /** SQL SPACE(int) function. */
+  public static String space(int n) {
+    return repeat(" ", n);
+  }
+
+  /** SQL SOUNDEX(string) function. */
+  public static String soundex(String s) {
+    return SOUNDEX.soundex(s);
+  }
+
+  /** SQL DIFFERENCE(string, string) function. */
+  public static int difference(String s0, String s1) {
+    String result0 = soundex(s0);
+    String result1 = soundex(s1);
+    for (int i = 0; i < SOUNDEX_LENGTH; i++) {
+      if (result0.charAt(i) != result1.charAt(i)) {
+        return i;
+      }
+    }
+    return SOUNDEX_LENGTH;
+  }
+
+  /** SQL LEFT(string, integer) function. */
+  public static @Nonnull String left(@Nonnull String s, int n) {
+    if (n <= 0) {
+      return "";
+    }
+    int len = s.length();
+    if (n >= len) {
+      return s;
+    }
+    return s.substring(0, n);
+  }
+
+  /** SQL LEFT(ByteString, integer) function. */
+  public static @Nonnull ByteString left(@Nonnull ByteString s, int n) {
+    if (n <= 0) {
+      return ByteString.EMPTY;
+    }
+    int len = s.length();
+    if (n >= len) {
+      return s;
+    }
+    return s.substring(0, n);
+  }
+
+  /** SQL RIGHT(string, integer) function. */
+  public static @Nonnull String right(@Nonnull String s, int n) {
+    if (n <= 0) {
+      return "";
+    }
+    int len = s.length();
+    if (n >= len) {
+      return s;
+    }
+    return s.substring(len - n);
+  }
+
+  /** SQL RIGHT(ByteString, integer) function. */
+  public static @Nonnull ByteString right(@Nonnull ByteString s, int n) {
+    if (n <= 0) {
+      return ByteString.EMPTY;
+    }
+    final int len = s.length();
+    if (n >= len) {
+      return s;
+    }
+    return s.substring(len - n);
+  }
+
+  /** SQL CHR(long) function. */
+  public static String chr(long n) {
+    return String.valueOf(Character.toChars((int) n));
+  }
+
   /** SQL CHARACTER_LENGTH(string) function. */
   public static int charLength(String s) {
     return s.length();
@@ -187,29 +455,32 @@ public class SqlFunctions {
 
   /** SQL {@code RTRIM} function applied to string. */
   public static String rtrim(String s) {
-    return trim_(s, false, true, ' ');
+    return trim(false, true, " ", s);
   }
 
   /** SQL {@code LTRIM} function. */
   public static String ltrim(String s) {
-    return trim_(s, true, false, ' ');
+    return trim(true, false, " ", s);
   }
 
   /** SQL {@code TRIM(... seek FROM s)} function. */
-  public static String trim(boolean leading, boolean trailing, String seek,
+  public static String trim(boolean left, boolean right, String seek,
       String s) {
-    return trim_(s, leading, trailing, seek.charAt(0));
+    return trim(left, right, seek, s, true);
   }
 
-  /** SQL {@code TRIM} function. */
-  private static String trim_(String s, boolean left, boolean right, char c) {
+  public static String trim(boolean left, boolean right, String seek,
+      String s, boolean strict) {
+    if (strict && seek.length() != 1) {
+      throw RESOURCE.trimError().ex();
+    }
     int j = s.length();
     if (right) {
       for (;;) {
         if (j == 0) {
           return "";
         }
-        if (s.charAt(j - 1) != c) {
+        if (seek.indexOf(s.charAt(j - 1)) < 0) {
           break;
         }
         --j;
@@ -221,7 +492,7 @@ public class SqlFunctions {
         if (i == j) {
           return "";
         }
-        if (s.charAt(i) != c) {
+        if (seek.indexOf(s.charAt(i)) < 0) {
           break;
         }
         ++i;
@@ -271,9 +542,6 @@ public class SqlFunctions {
 
   /** SQL {@code OVERLAY} function. */
   public static String overlay(String s, String r, int start) {
-    if (s == null || r == null) {
-      return null;
-    }
     return s.substring(0, start - 1)
         + r
         + s.substring(start - 1 + r.length());
@@ -281,9 +549,6 @@ public class SqlFunctions {
 
   /** SQL {@code OVERLAY} function. */
   public static String overlay(String s, String r, int start, int length) {
-    if (s == null || r == null) {
-      return null;
-    }
     return s.substring(0, start - 1)
         + r
         + s.substring(start - 1 + length);
@@ -291,23 +556,17 @@ public class SqlFunctions {
 
   /** SQL {@code OVERLAY} function applied to binary strings. */
   public static ByteString overlay(ByteString s, ByteString r, int start) {
-    if (s == null || r == null) {
-      return null;
-    }
     return s.substring(0, start - 1)
-           .concat(r)
-           .concat(s.substring(start - 1 + r.length()));
+        .concat(r)
+        .concat(s.substring(start - 1 + r.length()));
   }
 
   /** SQL {@code OVERLAY} function applied to binary strings. */
   public static ByteString overlay(ByteString s, ByteString r, int start,
       int length) {
-    if (s == null || r == null) {
-      return null;
-    }
     return s.substring(0, start - 1)
-           .concat(r)
-           .concat(s.substring(start - 1 + length));
+        .concat(r)
+        .concat(s.substring(start - 1 + length));
   }
 
   /** SQL {@code LIKE} function. */
@@ -334,118 +593,219 @@ public class SqlFunctions {
     return Pattern.matches(regex, s);
   }
 
-  // =
+  public static boolean posixRegex(String s, String regex, Boolean caseSensitive) {
+    // Replace existing character classes with java equivalent ones
+    String originalRegex = regex;
+    String[] existingExpressions = Arrays.stream(POSIX_CHARACTER_CLASSES)
+        .filter(v -> originalRegex.contains(v.toLowerCase(Locale.ROOT))).toArray(String[]::new);
+    for (String v : existingExpressions) {
+      regex = regex.replaceAll(v.toLowerCase(Locale.ROOT), "\\\\p{" + v + "}");
+    }
 
-  /** SQL = operator applied to Object values (including String; neither
-   * side may be null). */
-  public static boolean eq(Object b0, Object b1) {
-    return b0.equals(b1);
+    int flags = caseSensitive ? 0 : Pattern.CASE_INSENSITIVE;
+    return Pattern.compile(regex, flags).matcher(s).find();
   }
 
-  /** SQL = operator applied to BigDecimal values (neither may be null). */
+  // =
+
+  /** SQL <code>=</code> operator applied to BigDecimal values (neither may be
+   * null). */
   public static boolean eq(BigDecimal b0, BigDecimal b1) {
     return b0.stripTrailingZeros().equals(b1.stripTrailingZeros());
   }
 
-  // <>
-
-  /** SQL &lt;&gt; operator applied to Object values (including String;
+  /** SQL <code>=</code> operator applied to Object values (including String;
    * neither side may be null). */
-  public static boolean ne(Object b0, Object b1) {
-    return !b0.equals(b1);
+  public static boolean eq(Object b0, Object b1) {
+    return b0.equals(b1);
   }
 
-  /** SQL &lt;&gt; operator applied to BigDecimal values. */
+  /** SQL <code>=</code> operator applied to Object values (at least one operand
+   * has ANY type; neither may be null). */
+  public static boolean eqAny(Object b0, Object b1) {
+    if (b0.getClass().equals(b1.getClass())) {
+      // The result of SqlFunctions.eq(BigDecimal, BigDecimal) makes more sense
+      // than BigDecimal.equals(BigDecimal). So if both of types are BigDecimal,
+      // we just use SqlFunctions.eq(BigDecimal, BigDecimal).
+      if (BigDecimal.class.isInstance(b0)) {
+        return eq((BigDecimal) b0, (BigDecimal) b1);
+      } else {
+        return b0.equals(b1);
+      }
+    } else if (allAssignable(Number.class, b0, b1)) {
+      return eq(toBigDecimal((Number) b0), toBigDecimal((Number) b1));
+    }
+    // We shouldn't rely on implementation even though overridden equals can
+    // handle other types which may create worse result: for example,
+    // a.equals(b) != b.equals(a)
+    return false;
+  }
+
+  /** Returns whether two objects can both be assigned to a given class. */
+  private static boolean allAssignable(Class clazz, Object o0, Object o1) {
+    return clazz.isInstance(o0) && clazz.isInstance(o1);
+  }
+
+  // <>
+
+  /** SQL <code>&lt;gt;</code> operator applied to BigDecimal values. */
   public static boolean ne(BigDecimal b0, BigDecimal b1) {
     return b0.compareTo(b1) != 0;
   }
 
+  /** SQL <code>&lt;gt;</code> operator applied to Object values (including
+   * String; neither side may be null). */
+  public static boolean ne(Object b0, Object b1) {
+    return !eq(b0, b1);
+  }
+
+  /** SQL <code>&lt;gt;</code> operator applied to Object values (at least one
+   *  operand has ANY type, including String; neither may be null). */
+  public static boolean neAny(Object b0, Object b1) {
+    return !eqAny(b0, b1);
+  }
+
   // <
 
-  /** SQL &lt; operator applied to boolean values. */
+  /** SQL <code>&lt;</code> operator applied to boolean values. */
   public static boolean lt(boolean b0, boolean b1) {
     return compare(b0, b1) < 0;
   }
 
-  /** SQL &lt; operator applied to String values. */
+  /** SQL <code>&lt;</code> operator applied to String values. */
   public static boolean lt(String b0, String b1) {
     return b0.compareTo(b1) < 0;
   }
 
-  /** SQL &lt; operator applied to ByteString values. */
+  /** SQL <code>&lt;</code> operator applied to ByteString values. */
   public static boolean lt(ByteString b0, ByteString b1) {
     return b0.compareTo(b1) < 0;
   }
 
-  /** SQL &lt; operator applied to BigDecimal values. */
+  /** SQL <code>&lt;</code> operator applied to BigDecimal values. */
   public static boolean lt(BigDecimal b0, BigDecimal b1) {
     return b0.compareTo(b1) < 0;
   }
 
+  /** SQL <code>&lt;</code> operator applied to Object values. */
+  public static boolean ltAny(Object b0, Object b1) {
+    if (b0.getClass().equals(b1.getClass())
+        && b0 instanceof Comparable) {
+      //noinspection unchecked
+      return ((Comparable) b0).compareTo(b1) < 0;
+    } else if (allAssignable(Number.class, b0, b1)) {
+      return lt(toBigDecimal((Number) b0), toBigDecimal((Number) b1));
+    }
+
+    throw notComparable("<", b0, b1);
+  }
+
   // <=
 
-  /** SQL &le; operator applied to boolean values. */
+  /** SQL <code>&le;</code> operator applied to boolean values. */
   public static boolean le(boolean b0, boolean b1) {
     return compare(b0, b1) <= 0;
   }
 
-  /** SQL &le; operator applied to String values. */
+  /** SQL <code>&le;</code> operator applied to String values. */
   public static boolean le(String b0, String b1) {
     return b0.compareTo(b1) <= 0;
   }
 
-  /** SQL &le; operator applied to ByteString values. */
+  /** SQL <code>&le;</code> operator applied to ByteString values. */
   public static boolean le(ByteString b0, ByteString b1) {
     return b0.compareTo(b1) <= 0;
   }
 
-  /** SQL &le; operator applied to BigDecimal values. */
+  /** SQL <code>&le;</code> operator applied to BigDecimal values. */
   public static boolean le(BigDecimal b0, BigDecimal b1) {
     return b0.compareTo(b1) <= 0;
   }
 
+  /** SQL <code>&le;</code> operator applied to Object values (at least one
+   * operand has ANY type; neither may be null). */
+  public static boolean leAny(Object b0, Object b1) {
+    if (b0.getClass().equals(b1.getClass())
+        && b0 instanceof Comparable) {
+      //noinspection unchecked
+      return ((Comparable) b0).compareTo(b1) <= 0;
+    } else if (allAssignable(Number.class, b0, b1)) {
+      return le(toBigDecimal((Number) b0), toBigDecimal((Number) b1));
+    }
+
+    throw notComparable("<=", b0, b1);
+  }
+
   // >
 
-  /** SQL &gt; operator applied to boolean values. */
+  /** SQL <code>&gt;</code> operator applied to boolean values. */
   public static boolean gt(boolean b0, boolean b1) {
     return compare(b0, b1) > 0;
   }
 
-  /** SQL &gt; operator applied to String values. */
+  /** SQL <code>&gt;</code> operator applied to String values. */
   public static boolean gt(String b0, String b1) {
     return b0.compareTo(b1) > 0;
   }
 
-  /** SQL &gt; operator applied to ByteString values. */
+  /** SQL <code>&gt;</code> operator applied to ByteString values. */
   public static boolean gt(ByteString b0, ByteString b1) {
     return b0.compareTo(b1) > 0;
   }
 
-  /** SQL &gt; operator applied to BigDecimal values. */
+  /** SQL <code>&gt;</code> operator applied to BigDecimal values. */
   public static boolean gt(BigDecimal b0, BigDecimal b1) {
     return b0.compareTo(b1) > 0;
   }
 
+  /** SQL <code>&gt;</code> operator applied to Object values (at least one
+   * operand has ANY type; neither may be null). */
+  public static boolean gtAny(Object b0, Object b1) {
+    if (b0.getClass().equals(b1.getClass())
+        && b0 instanceof Comparable) {
+      //noinspection unchecked
+      return ((Comparable) b0).compareTo(b1) > 0;
+    } else if (allAssignable(Number.class, b0, b1)) {
+      return gt(toBigDecimal((Number) b0), toBigDecimal((Number) b1));
+    }
+
+    throw notComparable(">", b0, b1);
+  }
+
   // >=
 
-  /** SQL &ge; operator applied to boolean values. */
+  /** SQL <code>&ge;</code> operator applied to boolean values. */
   public static boolean ge(boolean b0, boolean b1) {
     return compare(b0, b1) >= 0;
   }
 
-  /** SQL &ge; operator applied to String values. */
+  /** SQL <code>&ge;</code> operator applied to String values. */
   public static boolean ge(String b0, String b1) {
     return b0.compareTo(b1) >= 0;
   }
 
-  /** SQL &ge; operator applied to ByteString values. */
+  /** SQL <code>&ge;</code> operator applied to ByteString values. */
   public static boolean ge(ByteString b0, ByteString b1) {
     return b0.compareTo(b1) >= 0;
   }
 
-  /** SQL &ge; operator applied to BigDecimal values. */
+  /** SQL <code>&ge;</code> operator applied to BigDecimal values. */
   public static boolean ge(BigDecimal b0, BigDecimal b1) {
     return b0.compareTo(b1) >= 0;
+  }
+
+  /** SQL <code>&ge;</code> operator applied to Object values (at least one
+   * operand has ANY type; neither may be null). */
+  public static boolean geAny(Object b0, Object b1) {
+    if (b0.getClass().equals(b1.getClass())
+        && b0 instanceof Comparable) {
+      //noinspection unchecked
+      return ((Comparable) b0).compareTo(b1) >= 0;
+    } else if (allAssignable(Number.class, b0, b1)) {
+      return ge(toBigDecimal((Number) b0), toBigDecimal((Number) b1));
+    }
+
+    throw notComparable(">=", b0, b1);
   }
 
   // +
@@ -491,6 +851,20 @@ public class SqlFunctions {
     return (b0 == null || b1 == null) ? null : b0.add(b1);
   }
 
+  /** SQL <code>+</code> operator applied to Object values (at least one operand
+   * has ANY type; either may be null). */
+  public static Object plusAny(Object b0, Object b1) {
+    if (b0 == null || b1 == null) {
+      return null;
+    }
+
+    if (allAssignable(Number.class, b0, b1)) {
+      return plus(toBigDecimal((Number) b0), toBigDecimal((Number) b1));
+    }
+
+    throw notArithmetic("+", b0, b1);
+  }
+
   // -
 
   /** SQL <code>-</code> operator applied to int values. */
@@ -532,6 +906,20 @@ public class SqlFunctions {
   /** SQL <code>-</code> operator applied to BigDecimal values. */
   public static BigDecimal minus(BigDecimal b0, BigDecimal b1) {
     return (b0 == null || b1 == null) ? null : b0.subtract(b1);
+  }
+
+  /** SQL <code>-</code> operator applied to Object values (at least one operand
+   * has ANY type; either may be null). */
+  public static Object minusAny(Object b0, Object b1) {
+    if (b0 == null || b1 == null) {
+      return null;
+    }
+
+    if (allAssignable(Number.class, b0, b1)) {
+      return minus(toBigDecimal((Number) b0), toBigDecimal((Number) b1));
+    }
+
+    throw notArithmetic("-", b0, b1);
   }
 
   // /
@@ -579,6 +967,30 @@ public class SqlFunctions {
         : b0.divide(b1, MathContext.DECIMAL64);
   }
 
+  /** SQL <code>/</code> operator applied to Object values (at least one operand
+   * has ANY type; either may be null). */
+  public static Object divideAny(Object b0, Object b1) {
+    if (b0 == null || b1 == null) {
+      return null;
+    }
+
+    if (allAssignable(Number.class, b0, b1)) {
+      return divide(toBigDecimal((Number) b0), toBigDecimal((Number) b1));
+    }
+
+    throw notArithmetic("/", b0, b1);
+  }
+
+  public static int divide(int b0, BigDecimal b1) {
+    return BigDecimal.valueOf(b0)
+        .divide(b1, RoundingMode.HALF_DOWN).intValue();
+  }
+
+  public static long divide(long b0, BigDecimal b1) {
+    return BigDecimal.valueOf(b0)
+        .divide(b1, RoundingMode.HALF_DOWN).longValue();
+  }
+
   // *
 
   /** SQL <code>*</code> operator applied to int values. */
@@ -622,6 +1034,46 @@ public class SqlFunctions {
     return (b0 == null || b1 == null) ? null : b0.multiply(b1);
   }
 
+  /** SQL <code>*</code> operator applied to Object values (at least one operand
+   * has ANY type; either may be null). */
+  public static Object multiplyAny(Object b0, Object b1) {
+    if (b0 == null || b1 == null) {
+      return null;
+    }
+
+    if (allAssignable(Number.class, b0, b1)) {
+      return multiply(toBigDecimal((Number) b0), toBigDecimal((Number) b1));
+    }
+
+    throw notArithmetic("*", b0, b1);
+  }
+
+  private static RuntimeException notArithmetic(String op, Object b0,
+      Object b1) {
+    return RESOURCE.invalidTypesForArithmetic(b0.getClass().toString(),
+        op, b1.getClass().toString()).ex();
+  }
+
+  private static RuntimeException notComparable(String op, Object b0,
+      Object b1) {
+    return RESOURCE.invalidTypesForComparison(b0.getClass().toString(),
+        op, b1.getClass().toString()).ex();
+  }
+
+  // &
+
+  /** Helper function for implementing <code>BIT_AND</code> */
+  public static long bitAnd(long b0, long b1) {
+    return b0 & b1;
+  }
+
+  // |
+
+  /** Helper function for implementing <code>BIT_OR</code> */
+  public static long bitOr(long b0, long b1) {
+    return b0 | b1;
+  }
+
   // EXP
 
   /** SQL <code>EXP</code> operator applied to double values. */
@@ -629,8 +1081,8 @@ public class SqlFunctions {
     return Math.exp(b0);
   }
 
-  public static double exp(long b0) {
-    return Math.exp(b0);
+  public static double exp(BigDecimal b0) {
+    return Math.exp(b0.doubleValue());
   }
 
   // POWER
@@ -640,12 +1092,16 @@ public class SqlFunctions {
     return Math.pow(b0, b1);
   }
 
-  public static double power(long b0, long b1) {
-    return Math.pow(b0, b1);
+  public static double power(double b0, BigDecimal b1) {
+    return Math.pow(b0, b1.doubleValue());
   }
 
-  public static double power(long b0, BigDecimal b1) {
-    return Math.pow(b0, b1.doubleValue());
+  public static double power(BigDecimal b0, double b1) {
+    return Math.pow(b0.doubleValue(), b1);
+  }
+
+  public static double power(BigDecimal b0, BigDecimal b1) {
+    return Math.pow(b0.doubleValue(), b1.doubleValue());
   }
 
   // LN
@@ -653,11 +1109,6 @@ public class SqlFunctions {
   /** SQL {@code LN(number)} function applied to double values. */
   public static double ln(double d) {
     return Math.log(d);
-  }
-
-  /** SQL {@code LN(number)} function applied to long values. */
-  public static double ln(long b0) {
-    return Math.log(b0);
   }
 
   /** SQL {@code LN(number)} function applied to BigDecimal values. */
@@ -669,11 +1120,6 @@ public class SqlFunctions {
 
   /** SQL <code>LOG10(numeric)</code> operator applied to double values. */
   public static double log10(double b0) {
-    return Math.log10(b0);
-  }
-
-  /** SQL {@code LOG10(number)} function applied to long values. */
-  public static double log10(long b0) {
     return Math.log10(b0);
   }
 
@@ -730,7 +1176,7 @@ public class SqlFunctions {
   }
 
   public static BigDecimal floor(BigDecimal b0) {
-    return b0.setScale(0, BigDecimal.ROUND_FLOOR);
+    return b0.setScale(0, RoundingMode.FLOOR);
   }
 
   /** SQL <code>FLOOR</code> operator applied to byte values. */
@@ -791,7 +1237,7 @@ public class SqlFunctions {
   }
 
   public static BigDecimal ceil(BigDecimal b0) {
-    return b0.setScale(0, BigDecimal.ROUND_CEILING);
+    return b0.setScale(0, RoundingMode.CEILING);
   }
 
   /** SQL <code>CEIL</code> operator applied to byte values. */
@@ -872,6 +1318,227 @@ public class SqlFunctions {
   /** SQL <code>ABS</code> operator applied to BigDecimal values. */
   public static BigDecimal abs(BigDecimal b0) {
     return b0.abs();
+  }
+
+  // ACOS
+  /** SQL <code>ACOS</code> operator applied to BigDecimal values. */
+  public static double acos(BigDecimal b0) {
+    return Math.acos(b0.doubleValue());
+  }
+
+  /** SQL <code>ACOS</code> operator applied to double values. */
+  public static double acos(double b0) {
+    return Math.acos(b0);
+  }
+
+  // ASIN
+  /** SQL <code>ASIN</code> operator applied to BigDecimal values. */
+  public static double asin(BigDecimal b0) {
+    return Math.asin(b0.doubleValue());
+  }
+
+  /** SQL <code>ASIN</code> operator applied to double values. */
+  public static double asin(double b0) {
+    return Math.asin(b0);
+  }
+
+  // ATAN
+  /** SQL <code>ATAN</code> operator applied to BigDecimal values. */
+  public static double atan(BigDecimal b0) {
+    return Math.atan(b0.doubleValue());
+  }
+
+  /** SQL <code>ATAN</code> operator applied to double values. */
+  public static double atan(double b0) {
+    return Math.atan(b0);
+  }
+
+  // ATAN2
+  /** SQL <code>ATAN2</code> operator applied to double/BigDecimal values. */
+  public static double atan2(double b0, BigDecimal b1) {
+    return Math.atan2(b0, b1.doubleValue());
+  }
+
+  /** SQL <code>ATAN2</code> operator applied to BigDecimal/double values. */
+  public static double atan2(BigDecimal b0, double b1) {
+    return Math.atan2(b0.doubleValue(), b1);
+  }
+
+  /** SQL <code>ATAN2</code> operator applied to BigDecimal values. */
+  public static double atan2(BigDecimal b0, BigDecimal b1) {
+    return Math.atan2(b0.doubleValue(), b1.doubleValue());
+  }
+
+  /** SQL <code>ATAN2</code> operator applied to double values. */
+  public static double atan2(double b0, double b1) {
+    return Math.atan2(b0, b1);
+  }
+
+  // COS
+  /** SQL <code>COS</code> operator applied to BigDecimal values. */
+  public static double cos(BigDecimal b0) {
+    return Math.cos(b0.doubleValue());
+  }
+
+  /** SQL <code>COS</code> operator applied to double values. */
+  public static double cos(double b0) {
+    return Math.cos(b0);
+  }
+
+  // COT
+  /** SQL <code>COT</code> operator applied to BigDecimal values. */
+  public static double cot(BigDecimal b0) {
+    return 1.0d / Math.tan(b0.doubleValue());
+  }
+
+  /** SQL <code>COT</code> operator applied to double values. */
+  public static double cot(double b0) {
+    return 1.0d / Math.tan(b0);
+  }
+
+  // DEGREES
+  /** SQL <code>DEGREES</code> operator applied to BigDecimal values. */
+  public static double degrees(BigDecimal b0) {
+    return Math.toDegrees(b0.doubleValue());
+  }
+
+  /** SQL <code>DEGREES</code> operator applied to double values. */
+  public static double degrees(double b0) {
+    return Math.toDegrees(b0);
+  }
+
+  // RADIANS
+  /** SQL <code>RADIANS</code> operator applied to BigDecimal values. */
+  public static double radians(BigDecimal b0) {
+    return Math.toRadians(b0.doubleValue());
+  }
+
+  /** SQL <code>RADIANS</code> operator applied to double values. */
+  public static double radians(double b0) {
+    return Math.toRadians(b0);
+  }
+
+  // SQL ROUND
+  /** SQL <code>ROUND</code> operator applied to int values. */
+  public static int sround(int b0) {
+    return sround(b0, 0);
+  }
+
+  /** SQL <code>ROUND</code> operator applied to int values. */
+  public static int sround(int b0, int b1) {
+    return sround(BigDecimal.valueOf(b0), b1).intValue();
+  }
+
+  /** SQL <code>ROUND</code> operator applied to long values. */
+  public static long sround(long b0) {
+    return sround(b0, 0);
+  }
+
+  /** SQL <code>ROUND</code> operator applied to long values. */
+  public static long sround(long b0, int b1) {
+    return sround(BigDecimal.valueOf(b0), b1).longValue();
+  }
+
+  /** SQL <code>ROUND</code> operator applied to BigDecimal values. */
+  public static BigDecimal sround(BigDecimal b0) {
+    return sround(b0, 0);
+  }
+
+  /** SQL <code>ROUND</code> operator applied to BigDecimal values. */
+  public static BigDecimal sround(BigDecimal b0, int b1) {
+    return b0.movePointRight(b1)
+        .setScale(0, RoundingMode.HALF_UP).movePointLeft(b1);
+  }
+
+  /** SQL <code>ROUND</code> operator applied to double values. */
+  public static double sround(double b0) {
+    return sround(b0, 0);
+  }
+
+  /** SQL <code>ROUND</code> operator applied to double values. */
+  public static double sround(double b0, int b1) {
+    return sround(BigDecimal.valueOf(b0), b1).doubleValue();
+  }
+
+  // SQL TRUNCATE
+  /** SQL <code>TRUNCATE</code> operator applied to int values. */
+  public static int struncate(int b0) {
+    return struncate(b0, 0);
+  }
+
+  public static int struncate(int b0, int b1) {
+    return struncate(BigDecimal.valueOf(b0), b1).intValue();
+  }
+
+  /** SQL <code>TRUNCATE</code> operator applied to long values. */
+  public static long struncate(long b0) {
+    return struncate(b0, 0);
+  }
+
+  public static long struncate(long b0, int b1) {
+    return struncate(BigDecimal.valueOf(b0), b1).longValue();
+  }
+
+  /** SQL <code>TRUNCATE</code> operator applied to BigDecimal values. */
+  public static BigDecimal struncate(BigDecimal b0) {
+    return struncate(b0, 0);
+  }
+
+  public static BigDecimal struncate(BigDecimal b0, int b1) {
+    return b0.movePointRight(b1)
+        .setScale(0, RoundingMode.DOWN).movePointLeft(b1);
+  }
+
+  /** SQL <code>TRUNCATE</code> operator applied to double values. */
+  public static double struncate(double b0) {
+    return struncate(b0, 0);
+  }
+
+  public static double struncate(double b0, int b1) {
+    return struncate(BigDecimal.valueOf(b0), b1).doubleValue();
+  }
+
+  // SIGN
+  /** SQL <code>SIGN</code> operator applied to int values. */
+  public static int sign(int b0) {
+    return Integer.signum(b0);
+  }
+
+  /** SQL <code>SIGN</code> operator applied to long values. */
+  public static long sign(long b0) {
+    return Long.signum(b0);
+  }
+
+  /** SQL <code>SIGN</code> operator applied to BigDecimal values. */
+  public static BigDecimal sign(BigDecimal b0) {
+    return BigDecimal.valueOf(b0.signum());
+  }
+
+  /** SQL <code>SIGN</code> operator applied to double values. */
+  public static double sign(double b0) {
+    return Math.signum(b0);
+  }
+
+  // SIN
+  /** SQL <code>SIN</code> operator applied to BigDecimal values. */
+  public static double sin(BigDecimal b0) {
+    return Math.sin(b0.doubleValue());
+  }
+
+  /** SQL <code>SIN</code> operator applied to double values. */
+  public static double sin(double b0) {
+    return Math.sin(b0);
+  }
+
+  // TAN
+  /** SQL <code>TAN</code> operator applied to BigDecimal values. */
+  public static double tan(BigDecimal b0) {
+    return Math.tan(b0.doubleValue());
+  }
+
+  /** SQL <code>TAN</code> operator applied to double values. */
+  public static double tan(double b0) {
+    return Math.tan(b0);
   }
 
   // Helpers
@@ -1009,18 +1676,18 @@ public class SqlFunctions {
 
   @NonDeterministic
   private static Object cannotConvert(Object o, Class toType) {
-    throw new RuntimeException("Cannot convert " + o + " to " + toType);
+    throw RESOURCE.cannotConvert(o.toString(), toType.toString()).ex();
   }
 
   /** CAST(VARCHAR AS BOOLEAN). */
   public static boolean toBoolean(String s) {
-    s = trim_(s, true, true, ' ');
+    s = trim(true, true, " ", s);
     if (s.equalsIgnoreCase("TRUE")) {
       return true;
     } else if (s.equalsIgnoreCase("FALSE")) {
       return false;
     } else {
-      throw new RuntimeException("Invalid character for cast");
+      throw RESOURCE.invalidCharacterForCast(s).ex();
     }
   }
 
@@ -1120,6 +1787,7 @@ public class SqlFunctions {
     return o instanceof Integer ? (Integer) o
         : o instanceof Number ? toInt((Number) o)
         : o instanceof String ? toInt((String) o)
+        : o instanceof java.util.Date ? toInt((java.util.Date) o)
         : (Integer) cannotConvert(o, int.class);
   }
 
@@ -1178,8 +1846,8 @@ public class SqlFunctions {
   public static float toFloat(Object o) {
     return o instanceof Float ? (Float) o
         : o instanceof Number ? toFloat((Number) o)
-            : o instanceof String ? toFloat((String) o)
-                : (Float) cannotConvert(o, float.class);
+        : o instanceof String ? toFloat((String) o)
+        : (Float) cannotConvert(o, float.class);
   }
 
   public static double toDouble(String s) {
@@ -1237,6 +1905,50 @@ public class SqlFunctions {
     return v == null ? null : internalToTime(v.intValue());
   }
 
+  public static Integer toTimeWithLocalTimeZone(String v) {
+    return v == null ? null : new TimeWithTimeZoneString(v)
+        .withTimeZone(DateTimeUtils.UTC_ZONE)
+        .getLocalTimeString()
+        .getMillisOfDay();
+  }
+
+  public static Integer toTimeWithLocalTimeZone(String v, TimeZone timeZone) {
+    return v == null ? null : new TimeWithTimeZoneString(v + " " + timeZone.getID())
+        .withTimeZone(DateTimeUtils.UTC_ZONE)
+        .getLocalTimeString()
+        .getMillisOfDay();
+  }
+
+  public static int timeWithLocalTimeZoneToTime(int v, TimeZone timeZone) {
+    return TimeWithTimeZoneString.fromMillisOfDay(v)
+        .withTimeZone(timeZone)
+        .getLocalTimeString()
+        .getMillisOfDay();
+  }
+
+  public static long timeWithLocalTimeZoneToTimestamp(String date, int v, TimeZone timeZone) {
+    final TimeWithTimeZoneString tTZ = TimeWithTimeZoneString.fromMillisOfDay(v)
+        .withTimeZone(DateTimeUtils.UTC_ZONE);
+    return new TimestampWithTimeZoneString(date + " " + tTZ.toString())
+        .withTimeZone(timeZone)
+        .getLocalTimestampString()
+        .getMillisSinceEpoch();
+  }
+
+  public static long timeWithLocalTimeZoneToTimestampWithLocalTimeZone(String date, int v) {
+    final TimeWithTimeZoneString tTZ = TimeWithTimeZoneString.fromMillisOfDay(v)
+        .withTimeZone(DateTimeUtils.UTC_ZONE);
+    return new TimestampWithTimeZoneString(date + " " + tTZ.toString())
+        .getLocalTimestampString()
+        .getMillisSinceEpoch();
+  }
+
+  public static String timeWithLocalTimeZoneToString(int v, TimeZone timeZone) {
+    return TimeWithTimeZoneString.fromMillisOfDay(v)
+        .withTimeZone(timeZone)
+        .toString();
+  }
+
   /** Converts the internal representation of a SQL TIMESTAMP (long) to the Java
    * type used for UDF parameters ({@link java.sql.Timestamp}). */
   public static java.sql.Timestamp internalToTimestamp(long v) {
@@ -1245,6 +1957,53 @@ public class SqlFunctions {
 
   public static java.sql.Timestamp internalToTimestamp(Long v) {
     return v == null ? null : internalToTimestamp(v.longValue());
+  }
+
+  public static int timestampWithLocalTimeZoneToDate(long v, TimeZone timeZone) {
+    return TimestampWithTimeZoneString.fromMillisSinceEpoch(v)
+        .withTimeZone(timeZone)
+        .getLocalDateString()
+        .getDaysSinceEpoch();
+  }
+
+  public static int timestampWithLocalTimeZoneToTime(long v, TimeZone timeZone) {
+    return TimestampWithTimeZoneString.fromMillisSinceEpoch(v)
+        .withTimeZone(timeZone)
+        .getLocalTimeString()
+        .getMillisOfDay();
+  }
+
+  public static long timestampWithLocalTimeZoneToTimestamp(long v, TimeZone timeZone) {
+    return TimestampWithTimeZoneString.fromMillisSinceEpoch(v)
+        .withTimeZone(timeZone)
+        .getLocalTimestampString()
+        .getMillisSinceEpoch();
+  }
+
+  public static String timestampWithLocalTimeZoneToString(long v, TimeZone timeZone) {
+    return TimestampWithTimeZoneString.fromMillisSinceEpoch(v)
+        .withTimeZone(timeZone)
+        .toString();
+  }
+
+  public static int timestampWithLocalTimeZoneToTimeWithLocalTimeZone(long v) {
+    return TimestampWithTimeZoneString.fromMillisSinceEpoch(v)
+        .getLocalTimeString()
+        .getMillisOfDay();
+  }
+
+  public static Long toTimestampWithLocalTimeZone(String v) {
+    return v == null ? null : new TimestampWithTimeZoneString(v)
+        .withTimeZone(DateTimeUtils.UTC_ZONE)
+        .getLocalTimestampString()
+        .getMillisSinceEpoch();
+  }
+
+  public static Long toTimestampWithLocalTimeZone(String v, TimeZone timeZone) {
+    return v == null ? null : new TimestampWithTimeZoneString(v + " " + timeZone.getID())
+        .withTimeZone(DateTimeUtils.UTC_ZONE)
+        .getLocalTimestampString()
+        .getMillisSinceEpoch();
   }
 
   // Don't need shortValueOf etc. - Short.valueOf is sufficient.
@@ -1306,9 +2065,37 @@ public class SqlFunctions {
     return s.indexOf(seek) + 1;
   }
 
-  /** SQL {@code POSITION(seek IN string)} function. */
+  /** SQL {@code POSITION(seek IN string)} function for byte strings. */
   public static int position(ByteString seek, ByteString s) {
     return s.indexOf(seek) + 1;
+  }
+
+  /** SQL {@code POSITION(seek IN string FROM integer)} function. */
+  public static int position(String seek, String s, int from) {
+    final int from0 = from - 1; // 0-based
+    if (from0 > s.length() || from0 < 0) {
+      return 0;
+    }
+
+    return s.indexOf(seek, from0) + 1;
+  }
+
+  /** SQL {@code POSITION(seek IN string FROM integer)} function for byte
+   * strings. */
+  public static int position(ByteString seek, ByteString s, int from) {
+    final int from0 = from - 1;
+    if (from0 > s.length() || from0 < 0) {
+      return 0;
+    }
+
+    // ByteString doesn't have indexOf(ByteString, int) until avatica-1.9
+    // (see [CALCITE-1423]), so apply substring and find from there.
+    Bug.upgrade("in avatica-1.9, use ByteString.substring(ByteString, int)");
+    final int p = s.substring(from0).indexOf(seek);
+    if (p < 0) {
+      return 0;
+    }
+    return p + from;
   }
 
   /** Helper for rounding. Truncate(12345, 1000) returns 12000. */
@@ -1337,6 +2124,105 @@ public class SqlFunctions {
       remainder += x;
     }
     return v - remainder;
+  }
+
+  /**
+   * SQL {@code LAST_DAY} function.
+   *
+   * @param date days since epoch
+   * @return days of the last day of the month since epoch
+   */
+  public static int lastDay(int date) {
+    int y0 = (int) DateTimeUtils.unixDateExtract(TimeUnitRange.YEAR, date);
+    int m0 = (int) DateTimeUtils.unixDateExtract(TimeUnitRange.MONTH, date);
+    int last = lastDay(y0, m0);
+    return DateTimeUtils.ymdToUnixDate(y0, m0, last);
+  }
+
+  /**
+   * SQL {@code LAST_DAY} function.
+   *
+   * @param timestamp milliseconds from epoch
+   * @return milliseconds of the last day of the month since epoch
+   */
+  public static int lastDay(long timestamp) {
+    int date = (int) (timestamp / DateTimeUtils.MILLIS_PER_DAY);
+    int y0 = (int) DateTimeUtils.unixDateExtract(TimeUnitRange.YEAR, date);
+    int m0 = (int) DateTimeUtils.unixDateExtract(TimeUnitRange.MONTH, date);
+    int last = lastDay(y0, m0);
+    return DateTimeUtils.ymdToUnixDate(y0, m0, last);
+  }
+
+  /**
+   * SQL {@code DAYNAME} function, applied to a TIMESTAMP argument.
+   *
+   * @param timestamp Milliseconds from epoch
+   * @param locale Locale
+   * @return Name of the weekday in the given locale
+   */
+  public static String dayNameWithTimestamp(long timestamp, Locale locale) {
+    return timeStampToLocalDate(timestamp)
+        .format(ROOT_DAY_FORMAT.withLocale(locale));
+  }
+
+  /**
+   * SQL {@code DAYNAME} function, applied to a DATE argument.
+   *
+   * @param date Days since epoch
+   * @param locale Locale
+   * @return Name of the weekday in the given locale
+   */
+  public static String dayNameWithDate(int date, Locale locale) {
+    return dateToLocalDate(date)
+        .format(ROOT_DAY_FORMAT.withLocale(locale));
+  }
+
+  /**
+   * SQL {@code MONTHNAME} function, applied to a TIMESTAMP argument.
+   *
+   * @param timestamp Milliseconds from epoch
+   * @param locale Locale
+   * @return Name of the month in the given locale
+   */
+  public static String monthNameWithTimestamp(long timestamp, Locale locale) {
+    return timeStampToLocalDate(timestamp)
+        .format(ROOT_MONTH_FORMAT.withLocale(locale));
+  }
+
+  /**
+   * SQL {@code MONTHNAME} function, applied to a DATE argument.
+   *
+   * @param date Days from epoch
+   * @param locale Locale
+   * @return Name of the month in the given locale
+   */
+  public static String monthNameWithDate(int date, Locale locale) {
+    return dateToLocalDate(date)
+        .format(ROOT_MONTH_FORMAT.withLocale(locale));
+  }
+
+  /**
+   * Converts a date (days since epoch) to a {@link LocalDate}.
+   *
+   * @param date days since epoch
+   * @return localDate
+   */
+  private static LocalDate dateToLocalDate(int date) {
+    int y0 = (int) DateTimeUtils.unixDateExtract(TimeUnitRange.YEAR, date);
+    int m0 = (int) DateTimeUtils.unixDateExtract(TimeUnitRange.MONTH, date);
+    int d0 = (int) DateTimeUtils.unixDateExtract(TimeUnitRange.DAY, date);
+    return LocalDate.of(y0, m0, d0);
+  }
+
+  /**
+   * Converts a timestamp (milliseconds since epoch) to a {@link LocalDate}.
+   *
+   * @param timestamp milliseconds from epoch
+   * @return localDate
+   */
+  private static LocalDate timeStampToLocalDate(long timestamp) {
+    int date = (int) (timestamp / DateTimeUtils.MILLIS_PER_DAY);
+    return dateToLocalDate(date);
   }
 
   /** SQL {@code CURRENT_TIMESTAMP} function. */
@@ -1381,9 +2267,37 @@ public class SqlFunctions {
     return (int) (localTimestamp(root) % DateTimeUtils.MILLIS_PER_DAY);
   }
 
-  /** SQL TRANSLATE(string, search_chars, replacement_chars) function. */
+  @NonDeterministic
+  public static TimeZone timeZone(DataContext root) {
+    return (TimeZone) DataContext.Variable.TIME_ZONE.get(root);
+  }
+
+  /** SQL {@code USER} function. */
+  @Deterministic
+  public static String user(DataContext root) {
+    return Objects.requireNonNull(DataContext.Variable.USER.get(root));
+  }
+
+  /** SQL {@code SYSTEM_USER} function. */
+  @Deterministic
+  public static String systemUser(DataContext root) {
+    return Objects.requireNonNull(DataContext.Variable.SYSTEM_USER.get(root));
+  }
+
+  @NonDeterministic
+  public static Locale locale(DataContext root) {
+    return (Locale) DataContext.Variable.LOCALE.get(root);
+  }
+
+  /** SQL {@code TRANSLATE(string, search_chars, replacement_chars)}
+   * function. */
   public static String translate3(String s, String search, String replacement) {
     return org.apache.commons.lang3.StringUtils.replaceChars(s, search, replacement);
+  }
+
+  /** SQL {@code REPLACE(string, search, replacement)} function. */
+  public static String replace(String s, String search, String replacement) {
+    return s.replace(search, replacement);
   }
 
   /** Helper for "array element reference". Caller has already ensured that
@@ -1406,14 +2320,38 @@ public class SqlFunctions {
    */
   public static Object item(Object object, Object index) {
     if (object instanceof Map) {
-      return ((Map) object).get(index);
+      return mapItem((Map) object, index);
     }
     if (object instanceof List && index instanceof Number) {
-      List list = (List) object;
-      return list.get(((Number) index).intValue());
+      return arrayItem((List) object, ((Number) index).intValue());
     }
     return null;
   }
+
+  /** As {@link #arrayItem} method, but allows array to be nullable. */
+  public static Object arrayItemOptional(List list, int item) {
+    if (list == null) {
+      return null;
+    }
+    return arrayItem(list, item);
+  }
+
+  /** As {@link #mapItem} method, but allows map to be nullable. */
+  public static Object mapItemOptional(Map map, Object item) {
+    if (map == null) {
+      return null;
+    }
+    return mapItem(map, item);
+  }
+
+  /** As {@link #item} method, but allows object to be nullable. */
+  public static Object itemOptional(Object object, Object index) {
+    if (object == null) {
+      return null;
+    }
+    return item(object, index);
+  }
+
 
   /** NULL &rarr; FALSE, FALSE &rarr; FALSE, TRUE &rarr; TRUE. */
   public static boolean isTrue(Boolean b) {
@@ -1448,7 +2386,7 @@ public class SqlFunctions {
     try {
       return Primitive.asList(a.getArray());
     } catch (SQLException e) {
-      throw new RuntimeException(e);
+      throw Util.toUnchecked(e);
     }
   }
 
@@ -1476,7 +2414,11 @@ public class SqlFunctions {
 
   /** Support the SLICE function. */
   public static List slice(List list) {
-    return list;
+    List result = new ArrayList(list.size());
+    for (Object e : list) {
+      result.add(structAccess(e, 0, null));
+    }
+    return result;
   }
 
   /** Support the ELEMENT function. */
@@ -1487,36 +2429,123 @@ public class SqlFunctions {
     case 1:
       return list.get(0);
     default:
-      throw new RuntimeException("more than one value");
+      throw RESOURCE.moreThanOneValueInList(list.toString()).ex();
     }
   }
 
-  public static Function1<Object, Enumerable<ComparableList<Comparable>>>
-  flatProduct(final int[] fieldCounts, final boolean withOrdinality,
+  /** Support the MEMBER OF function. */
+  public static boolean memberOf(Object object, Collection collection) {
+    return collection.contains(object);
+  }
+
+  /** Support the MULTISET INTERSECT DISTINCT function. */
+  public static <E> Collection<E> multisetIntersectDistinct(Collection<E> c1,
+      Collection<E> c2) {
+    final Set<E> result = new HashSet<>(c1);
+    result.retainAll(c2);
+    return new ArrayList<>(result);
+  }
+
+  /** Support the MULTISET INTERSECT ALL function. */
+  public static <E> Collection<E> multisetIntersectAll(Collection<E> c1,
+      Collection<E> c2) {
+    final List<E> result = new ArrayList<>(c1.size());
+    final List<E> c2Copy = new ArrayList<>(c2);
+    for (E e : c1) {
+      if (c2Copy.remove(e)) {
+        result.add(e);
+      }
+    }
+    return result;
+  }
+
+  /** Support the MULTISET EXCEPT ALL function. */
+  public static <E> Collection<E> multisetExceptAll(Collection<E> c1,
+      Collection<E> c2) {
+    final List<E> result = new LinkedList<>(c1);
+    for (E e : c2) {
+      result.remove(e);
+    }
+    return result;
+  }
+
+  /** Support the MULTISET EXCEPT DISTINCT function. */
+  public static <E> Collection<E> multisetExceptDistinct(Collection<E> c1,
+      Collection<E> c2) {
+    final Set<E> result = new HashSet<>(c1);
+    result.removeAll(c2);
+    return new ArrayList<>(result);
+  }
+
+  /** Support the IS A SET function. */
+  public static boolean isASet(Collection collection) {
+    if (collection instanceof Set) {
+      return true;
+    }
+    // capacity calculation is in the same way like for new HashSet(Collection)
+    // however return immediately in case of duplicates
+    Set set = new HashSet(Math.max((int) (collection.size() / .75f) + 1, 16));
+    for (Object e : collection) {
+      if (!set.add(e)) {
+        return false;
+      }
+    }
+    return true;
+  }
+
+  /** Support the SUBMULTISET OF function. */
+  public static boolean submultisetOf(Collection possibleSubMultiset,
+      Collection multiset) {
+    if (possibleSubMultiset.size() > multiset.size()) {
+      return false;
+    }
+    Collection multisetLocal = new LinkedList(multiset);
+    for (Object e : possibleSubMultiset) {
+      if (!multisetLocal.remove(e)) {
+        return false;
+      }
+    }
+    return true;
+  }
+
+  /** Support the MULTISET UNION function. */
+  public static Collection multisetUnionDistinct(Collection collection1,
+      Collection collection2) {
+    // capacity calculation is in the same way like for new HashSet(Collection)
+    Set resultCollection =
+        new HashSet(Math.max((int) ((collection1.size() + collection2.size()) / .75f) + 1, 16));
+    resultCollection.addAll(collection1);
+    resultCollection.addAll(collection2);
+    return new ArrayList(resultCollection);
+  }
+
+  /** Support the MULTISET UNION ALL function. */
+  public static Collection multisetUnionAll(Collection collection1,
+      Collection collection2) {
+    List resultCollection = new ArrayList(collection1.size() + collection2.size());
+    resultCollection.addAll(collection1);
+    resultCollection.addAll(collection2);
+    return resultCollection;
+  }
+
+  public static Function1<Object, Enumerable<ComparableList<Comparable>>> flatProduct(
+      final int[] fieldCounts, final boolean withOrdinality,
       final FlatProductInputType[] inputTypes) {
     if (fieldCounts.length == 1) {
       if (!withOrdinality && inputTypes[0] == FlatProductInputType.SCALAR) {
         //noinspection unchecked
         return (Function1) LIST_AS_ENUMERABLE;
       } else {
-        return new Function1<Object, Enumerable<ComparableList<Comparable>>>() {
-          public Enumerable<ComparableList<Comparable>> apply(Object row) {
-            return p2(new Object[] { row }, fieldCounts, withOrdinality,
-                  inputTypes);
-          }
-        };
-      }
-    }
-    return new Function1<Object, Enumerable<FlatLists.ComparableList<Comparable>>>() {
-      public Enumerable<FlatLists.ComparableList<Comparable>> apply(Object lists) {
-        return p2((Object[]) lists, fieldCounts, withOrdinality,
+        return row -> p2(new Object[] { row }, fieldCounts, withOrdinality,
             inputTypes);
       }
-    };
+    }
+    return lists -> p2((Object[]) lists, fieldCounts, withOrdinality,
+        inputTypes);
   }
 
-  private static Enumerable<FlatLists.ComparableList<Comparable>>
-  p2(Object[] lists, int[] fieldCounts, boolean withOrdinality,
+  private static Enumerable<FlatLists.ComparableList<Comparable>> p2(
+      Object[] lists, int[] fieldCounts, boolean withOrdinality,
       FlatProductInputType[] inputTypes) {
     final List<Enumerator<List<Comparable>>> enumerators = new ArrayList<>();
     int totalFieldCount = 0;
@@ -1530,12 +2559,7 @@ public class SqlFunctions {
             (List<Comparable>) inputObject;
         enumerators.add(
             Linq4j.transform(
-                Linq4j.enumerator(list),
-                new Function1<Comparable, List<Comparable>>() {
-                  public List<Comparable> apply(Comparable a0) {
-                    return FlatLists.of(a0);
-                  }
-                }));
+                Linq4j.enumerator(list), FlatLists::of));
         break;
       case LIST:
         @SuppressWarnings("unchecked") List<List<Comparable>> listList =
@@ -1549,11 +2573,7 @@ public class SqlFunctions {
             Linq4j.enumerator(map.entrySet());
 
         Enumerator<List<Comparable>> transformed = Linq4j.transform(enumerator,
-          new Function1<Entry<Comparable, Comparable>, List<Comparable>>() {
-            public List<Comparable> apply(Entry<Comparable, Comparable> entry) {
-              return FlatLists.<Comparable>of(entry.getKey(), entry.getValue());
-            }
-          });
+            e -> FlatLists.of(e.getKey(), e.getValue()));
         enumerators.add(transformed);
         break;
       default:
@@ -1577,9 +2597,8 @@ public class SqlFunctions {
 
   /** Similar to {@link Linq4j#product(Iterable)} but each resulting list
    * implements {@link FlatLists.ComparableList}. */
-  public static <E extends Comparable>
-  Enumerable<FlatLists.ComparableList<E>>
-  product(final List<Enumerator<List<E>>> enumerators, final int fieldCount,
+  public static <E extends Comparable> Enumerable<FlatLists.ComparableList<E>> product(
+      final List<Enumerator<List<E>>> enumerators, final int fieldCount,
       final boolean withOrdinality) {
     return new AbstractEnumerable<FlatLists.ComparableList<E>>() {
       public Enumerator<FlatLists.ComparableList<E>> enumerator() {
@@ -1589,8 +2608,124 @@ public class SqlFunctions {
     };
   }
 
+  /** Adds a given number of months to a timestamp, represented as the number
+   * of milliseconds since the epoch. */
+  public static long addMonths(long timestamp, int m) {
+    final long millis =
+        DateTimeUtils.floorMod(timestamp, DateTimeUtils.MILLIS_PER_DAY);
+    timestamp -= millis;
+    final long x =
+        addMonths((int) (timestamp / DateTimeUtils.MILLIS_PER_DAY), m);
+    return x * DateTimeUtils.MILLIS_PER_DAY + millis;
+  }
+
+  /** Adds a given number of months to a date, represented as the number of
+   * days since the epoch. */
+  public static int addMonths(int date, int m) {
+    int y0 = (int) DateTimeUtils.unixDateExtract(TimeUnitRange.YEAR, date);
+    int m0 = (int) DateTimeUtils.unixDateExtract(TimeUnitRange.MONTH, date);
+    int d0 = (int) DateTimeUtils.unixDateExtract(TimeUnitRange.DAY, date);
+    int y = m / 12;
+    y0 += y;
+    m0 += m - y * 12;
+    int last = lastDay(y0, m0);
+    if (d0 > last) {
+      d0 = last;
+    }
+    return DateTimeUtils.ymdToUnixDate(y0, m0, d0);
+  }
+
+  private static int lastDay(int y, int m) {
+    switch (m) {
+    case 2:
+      return y % 4 == 0
+          && (y % 100 != 0
+          || y % 400 == 0)
+          ? 29 : 28;
+    case 4:
+    case 6:
+    case 9:
+    case 11:
+      return 30;
+    default:
+      return 31;
+    }
+  }
+
+  /** Finds the number of months between two dates, each represented as the
+   * number of days since the epoch. */
+  public static int subtractMonths(int date0, int date1) {
+    if (date0 < date1) {
+      return -subtractMonths(date1, date0);
+    }
+    // Start with an estimate.
+    // Since no month has more than 31 days, the estimate is <= the true value.
+    int m = (date0 - date1) / 31;
+    for (;;) {
+      int date2 = addMonths(date1, m);
+      if (date2 >= date0) {
+        return m;
+      }
+      int date3 = addMonths(date1, m + 1);
+      if (date3 > date0) {
+        return m;
+      }
+      ++m;
+    }
+  }
+
+  public static int subtractMonths(long t0, long t1) {
+    final long millis0 =
+        DateTimeUtils.floorMod(t0, DateTimeUtils.MILLIS_PER_DAY);
+    final int d0 = (int) DateTimeUtils.floorDiv(t0 - millis0,
+        DateTimeUtils.MILLIS_PER_DAY);
+    final long millis1 =
+        DateTimeUtils.floorMod(t1, DateTimeUtils.MILLIS_PER_DAY);
+    final int d1 = (int) DateTimeUtils.floorDiv(t1 - millis1,
+        DateTimeUtils.MILLIS_PER_DAY);
+    int x = subtractMonths(d0, d1);
+    final long d2 = addMonths(d1, x);
+    if (d2 == d0 && millis0 < millis1) {
+      --x;
+    }
+    return x;
+  }
+
+  /**
+   * Implements the {@code .} (field access) operator on an object
+   * whose type is not known until runtime.
+   *
+   * <p>A struct object can be represented in various ways by the
+   * runtime and depends on the
+   * {@link org.apache.calcite.adapter.enumerable.JavaRowFormat}.
+   */
+  @Experimental
+  public static Object structAccess(Object structObject, int index, String fieldName) {
+    if (structObject == null) {
+      return null;
+    }
+
+    if (structObject instanceof Object[]) {
+      return ((Object[]) structObject)[index];
+    } else if (structObject instanceof List) {
+      return ((List) structObject).get(index);
+    } else if (structObject instanceof Row) {
+      return ((Row) structObject).getObject(index);
+    } else {
+      Class<?> beanClass = structObject.getClass();
+      try {
+        Field structField = beanClass.getDeclaredField(fieldName);
+        return structField.get(structObject);
+      } catch (NoSuchFieldException | IllegalAccessException ex) {
+        throw RESOURCE.failedToAccessField(fieldName, beanClass.getName()).ex(ex);
+      }
+    }
+  }
+
   /** Enumerates over the cartesian product of the given lists, returning
-   * a comparable list for each row. */
+   * a comparable list for each row.
+   *
+   * @param <E> element type */
   private static class ProductComparableListEnumerator<E extends Comparable>
       extends CartesianProductEnumerator<List<E>, FlatLists.ComparableList<E>> {
     final E[] flatElements;
@@ -1609,13 +2744,18 @@ public class SqlFunctions {
     public FlatLists.ComparableList<E> current() {
       int i = 0;
       for (Object element : (Object[]) elements) {
-        final List list2 = (List) element;
-        Object[] a = list2.toArray();
+        Object[] a;
+        if (element.getClass().isArray()) {
+          a = (Object[]) element;
+        } else {
+          final List list2 = (List) element;
+          a = list2.toArray();
+        }
         System.arraycopy(a, 0, flatElements, i, a.length);
         i += a.length;
       }
       if (withOrdinality) {
-        flatElements[i] = (E) new Integer(++ordinality); // 1-based
+        flatElements[i] = (E) Integer.valueOf(++ordinality); // 1-based
       }
       return FlatLists.ofComparable(list);
     }
